SH: Fixed collapsed popovers

--- a/app/oscitk/themes/Simple_Horizontal/styles/_paragraph-popover.scss
+++ b/app/oscitk/themes/Simple_Horizontal/styles/_paragraph-popover.scss
@@ -25,8 +25,8 @@
 		.popover-wrapper {
 
 			padding: 9px;
-			max-width: 200px;
 			max-height: 240px;
+			width: 200px;
 
 			.nav {
 				li {
